fix issue where subscription dialog showed a horizontal scroll bar #8 #15
removed a styles tag that gave extra padding to the dialog causing a scroll bar to show when it did not need to shown. Also renamed the home.component.css file to a scss file.

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -17,9 +17,13 @@
   left: 0;
 }
 
+mat-dialog-container {
+  width: auto;
+}
 .mat-expansion-panel, .mat-card, .defaultRoomButton, .notificationBell {
   border-radius: 20px;
 }
+
 
 @media screen and (min-width: 320px) {
 
