--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -272,7 +272,6 @@ mat-grid-tile mat-card {
 
 mat-dialog-container {
   border-radius: 15px !important;
-  padding: 20px !important;
   height: 120%;
 }
 
